gccida/c3/timevar_get
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_get/src/timevar.c:869:11: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
else if ( stack_0->timevar == tv ) 
          ^~~~~~~
          stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_get/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_get/src/obj/timevar.o] Error 1
